# keystoneauth-saml2

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
keystoneauth_saml2/: __init__.py  i18n.py
keystoneauth_saml2/tests/: base.py  test_auth_adfs.py  test_auth_saml2.py
keystoneauth_saml2/v3/: __init__.py  adfs.py  base.py  saml2.py
keystoneclient_federation/: __init__.py  i18n.py
keystoneclient_federation/auth/v3/: federation.py  saml2.py
keystoneclient_federation/tests/: base.py  client_fixtures.py  test_auth_saml2.py  test_keystoneclient_federation.py
keystoneclient_federation/v3/: saml2.py
keystoneclient_saml2/: __init__.py  i18n.py
keystoneclient_saml2/tests/: base.py  client_fixtures.py  test_auth_saml2.py  test_keystoneclient_federation.py
keystoneclient_saml2/v3/: saml2.py
