[metadata]
name = keystoneauth-saml2
summary = Federation plugins and helpers for the OpenStack clients.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
   keystoneauth_saml2

[entry_points]
keystoneauth1.auth.plugin =
    v3saml2 = keystoneauth_saml2.v3.saml2:Saml2Token
    # NOTE(marek-denis): Remove this plugin
    v3scopedsaml = keystoneauth_saml2.v3.saml2:Saml2ScopedToken
    v3adfs = keystoneauth_saml2.v3.saml2:ADFSToken

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = keystoneauth_saml2/locale
domain = keystoneauth-saml2

[update_catalog]
domain = keystoneauth-saml2
output_dir = keystoneauth_saml2/locale
input_file = keystoneauth_saml2/locale/keystoneauth-saml2.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = keystoneauth_saml2/locale/keystoneauth-saml2.pot
